--- a/package.json
+++ b/package.json
@@ -7,5 +7,14 @@
   "license": "MIT",
   "scripts": {
     "start": "echo done"
+  },
+  "dependencies": {
+    "@types/koa": "^2.13.4",
+    "@types/koa-router": "^7.4.4",
+    "@types/lodash": "^4.14.182",
+    "koa": "^2.13.4",
+    "koa-router": "^10.1.1",
+    "lodash": "^4.17.21",
+    "reflect-metadata": "^0.1.13"
   }
 }
