--- a/workspaces/citrine/package.json
+++ b/workspaces/citrine/package.json
@@ -1,12 +1,15 @@
 {
   "name": "citrine",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "repository": "https://github.com/node-citrine/citrine.git",
   "author": "Bendeguz Cseresnyes <cser.bende@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "start": "echo done"
+    "start": "echo done",
+    "build": "tsc",
+    "watch": "tsc -w"
   },
   "dependencies": {
     "@types/koa": "^2.13.4",
