--- a/workspaces/citrine/package.json
+++ b/workspaces/citrine/package.json
@@ -18,6 +18,7 @@
     "koa": "^2.13.4",
     "koa-router": "^10.1.1",
     "lodash": "^4.17.21",
-    "reflect-metadata": "^0.1.13"
+    "reflect-metadata": "^0.1.13",
+    "tsyringe": "^4.7.0"
   }
 }
