--- a/workspaces/example/package.json
+++ b/workspaces/example/package.json
@@ -1,10 +1,18 @@
 {
   "private": true,
+  "name": "example",
+  "version": "1.0.0",
   "scripts": {
     "build": "tsc",
+    "dev": "nodemon ./src/index.ts",
     "start": "node dist/index.js"
   },
   "dependencies": {
     "citrine": "*"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.19",
+    "ts-node": "^10.9.1",
+    "typescript": "^4.7.4"
   }
 }
