--- a/workspaces/example/package.json
+++ b/workspaces/example/package.json
@@ -8,7 +8,7 @@
     "start": "node dist/index.js"
   },
   "dependencies": {
-    "citrine": "*"
+    "raven": "*"
   },
   "devDependencies": {
     "nodemon": "^2.0.19",
