--- a/workspaces/raven/package.json
+++ b/workspaces/raven/package.json
@@ -19,6 +19,8 @@
     "koa-router": "^10.1.1",
     "lodash": "^4.17.21",
     "reflect-metadata": "^0.1.13",
+    "sequelize": "^6.21.4",
+    "sequelize-typescript": "^2.1.3",
     "tsyringe": "^4.7.0"
   }
 }
