--- a/workspaces/raven/package.json
+++ b/workspaces/raven/package.json
@@ -15,6 +15,7 @@
     "@types/koa": "^2.13.4",
     "@types/koa-router": "^7.4.4",
     "@types/lodash": "^4.14.182",
+    "glob": "^8.0.3",
     "koa": "^2.13.4",
     "koa-router": "^10.1.1",
     "lodash": "^4.17.21",
@@ -22,5 +23,8 @@
     "sequelize": "^6.21.4",
     "sequelize-typescript": "^2.1.3",
     "tsyringe": "^4.7.0"
+  },
+  "devDependencies": {
+    "@types/glob": "^7.2.0"
   }
 }
