Move examlle files to folders, add dev script to root

--- a/package.json
+++ b/package.json
@@ -1,6 +1,12 @@
 {
   "private": true,
+  "scripts": {
+    "dev": "concurrently -i -k -r -n example,raven  \"yarn workspace example dev\" \"yarn workspace raven watch\""
+  },
   "workspaces": [
     "workspaces/*"
-  ]
+  ],
+  "dependencies": {
+    "concurrently": "^7.3.0"
+  }
 }
