--- a/workspaces/raven/package.json
+++ b/workspaces/raven/package.json
@@ -9,7 +9,8 @@
   "scripts": {
     "start": "echo done",
     "build": "tsc",
-    "watch": "tsc -w"
+    "watch": "tsc -w",
+    "test": "jest"
   },
   "dependencies": {
     "@types/koa": "^2.13.4",
@@ -25,6 +26,13 @@
     "tsyringe": "^4.7.0"
   },
   "devDependencies": {
-    "@types/glob": "^7.2.0"
+    "@types/glob": "^7.2.0",
+    "@types/jest": "^28.1.8",
+    "@types/supertest": "^2.0.12",
+    "jest": "^29.0.1",
+    "jest-theories": "^1.5.1",
+    "supertest": "^6.2.4",
+    "ts-jest": "^28.0.8",
+    "ts-mockito": "^2.6.1"
   }
 }
