--- a/workspaces/raven/package.json
+++ b/workspaces/raven/package.json
@@ -13,11 +13,14 @@
     "test": "jest"
   },
   "dependencies": {
+    "@types/joi": "^17.2.3",
     "@types/koa": "^2.13.4",
     "@types/koa-router": "^7.4.4",
     "@types/lodash": "^4.14.182",
     "glob": "^8.0.3",
+    "joi": "^17.6.0",
     "koa": "^2.13.4",
+    "koa-bodyparser": "^4.3.0",
     "koa-router": "^10.1.1",
     "lodash": "^4.17.21",
     "reflect-metadata": "^0.1.13",
