--- a/workspaces/raven-plugin-auth/package.json
+++ b/workspaces/raven-plugin-auth/package.json
@@ -11,11 +11,14 @@
   "dependencies": {
     "@types/joi": "^17.2.3",
     "joi": "^17.6.0",
+    "koa-jwt": "^4.0.3",
+    "lodash": "^4.17.21",
     "raven": "*",
     "sequelize": "^6.21.4",
     "sequelize-typescript": "^2.1.3"
   },
   "devDependencies": {
+    "@types/koa-jwt": "^3.3.0",
     "typescript": "^4.7.4"
   }
 }
