--- a/workspaces/raven/package.json
+++ b/workspaces/raven/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@types/joi": "^17.2.3",
     "@types/koa": "^2.13.4",
+    "@types/koa-bodyparser": "^4.3.7",
     "@types/koa-router": "^7.4.4",
     "@types/lodash": "^4.14.182",
     "glob": "^8.0.3",
