--- a/workspaces/raven-plugin-auth/package.json
+++ b/workspaces/raven-plugin-auth/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@types/joi": "^17.2.3",
     "joi": "^17.6.0",
+    "jsonwebtoken": "^8.5.1",
     "koa-jwt": "^4.0.3",
     "lodash": "^4.17.21",
     "raven": "*",
@@ -18,6 +19,7 @@
     "sequelize-typescript": "^2.1.3"
   },
   "devDependencies": {
+    "@types/jsonwebtoken": "^8.5.9",
     "@types/koa-jwt": "^3.3.0",
     "typescript": "^4.7.4"
   }
