--- a/workspaces/raven/package.json
+++ b/workspaces/raven/package.json
@@ -18,6 +18,7 @@
     "@types/koa-bodyparser": "^4.3.7",
     "@types/koa-router": "^7.4.4",
     "@types/lodash": "^4.14.182",
+    "flattenizer": "^1.1.1",
     "glob": "^8.0.3",
     "joi": "^17.6.0",
     "koa": "^2.13.4",
