--- a/workspaces/raven/package.json
+++ b/workspaces/raven/package.json
@@ -28,12 +28,14 @@
     "reflect-metadata": "^0.1.13",
     "sequelize": "^6.21.4",
     "sequelize-typescript": "^2.1.3",
-    "tsyringe": "^4.7.0"
+    "tsyringe": "^4.7.0",
+    "yaml": "^2.1.1"
   },
   "devDependencies": {
     "@types/glob": "^7.2.0",
     "@types/jest": "^28.1.8",
     "@types/supertest": "^2.0.12",
+    "@types/yaml": "^1.9.7",
     "jest": "^28",
     "jest-theories": "^1.5.1",
     "supertest": "^6.2.4",
