--- a/workspaces/example/package.json
+++ b/workspaces/example/package.json
@@ -3,7 +3,7 @@
   "name": "example",
   "version": "1.0.0",
   "scripts": {
-    "build": "tsc",
+    "build": "tsc -b",
     "dev": "nodemon ./src/index.ts",
     "start": "node dist/index.js"
   },
