--- a/workspaces/raven-plugin-koa-auth/package.json
+++ b/workspaces/raven-plugin-koa-auth/package.json
@@ -1,6 +1,6 @@
 {
   "private": true,
-  "name": "raven-plugin-auth",
+  "name": "raven-plugin-koa-auth",
   "version": "1.0.0",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -9,14 +9,10 @@
     "watch": "tsc -w"
   },
   "dependencies": {
-    "@types/joi": "^17.2.3",
-    "joi": "^17.6.0",
     "jsonwebtoken": "^8.5.1",
     "koa-jwt": "^4.0.3",
-    "lodash": "^4.17.21",
     "raven": "*",
-    "sequelize": "^6.21.4",
-    "sequelize-typescript": "^2.1.3"
+    "raven-plugin-koa": "*"
   },
   "devDependencies": {
     "@types/jsonwebtoken": "^8.5.9",
