--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -16,8 +16,9 @@ jobs:
       - uses: actions/setup-node@v3
         with:
           node-version: 16
-      - run: npm run build
-      - run: npm run test
+      - run: yarn
+      - run: yarn build
+      - run: yarn test
 
   publish-npm:
     needs: build
