--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -9,19 +9,19 @@ on:
     types: [created]
 
 jobs:
-  build:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-node@v3
-        with:
-          node-version: 16
-      - run: yarn
-      - run: yarn build
-   #   - run: yarn test
+  #build:
+  #  runs-on: ubuntu-latest
+  #  steps:
+  #    - uses: actions/checkout@v3
+  #    - uses: actions/setup-node@v3
+  #      with:
+  #        node-version: 16
+  #    - run: yarn
+  #    - run: yarn build
+  #    - run: yarn test
 
   publish-npm:
-    needs: build
+    #needs: build
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
@@ -29,7 +29,8 @@ jobs:
         with:
           node-version: 16
           registry-url: https://nexus.thor.akromentos.com/repository/npm-hosted/
-      - run: npm build
-      - run: npm publish
+      - run: yarn
+      - run: yarn build
+      - run: yarn publish
         env:
           NODE_AUTH_TOKEN: ${{secrets.npm_token}}
