--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -28,9 +28,9 @@ jobs:
       - uses: actions/setup-node@v3
         with:
           node-version: 16
-          registry-url: https://nexus.thor.akromentos.com/repository/npm-hosted/
+          registry-url: https://registry.npmjs.org
       - run: yarn
       - run: yarn build
-      - run: yarn publish
+      - run: yarn publish --registry https://nexus.thor.akromentos.com/repository/npm-hosted/
         env:
           NODE_AUTH_TOKEN: ${{secrets.npm_token}}
