--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -31,6 +31,11 @@ jobs:
           registry-url: https://registry.npmjs.org
       - run: yarn
       - run: yarn build
-      - run: yarn workspace raven publish --registry https://nexus.thor.akromentos.com/repository/npm-hosted/
+      - uses: actions/setup-node@v3
+        with:
+          node-version: 16
+          registry-url: https://nexus.thor.akromentos.com/repository/npm-hosted/
+          always-auth: true
+      - run: yarn workspace raven publish
         env:
           NODE_AUTH_TOKEN: ${{secrets.npm_token}}
