--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -31,6 +31,7 @@ jobs:
         with:
           node-version: 16
           registry-url: https://nexus.thor.akromentos.com/repository/npm/
+          always-auth: true
       - run: yarn
       - run: yarn build
       - run: yarn workspace raven publish
