--- a/workspaces/example/package.json
+++ b/workspaces/example/package.json
@@ -7,7 +7,7 @@
     "watch": "tsc -b -w",
     "dev": "nodemon ./src/index.ts",
     "start": "node dist/index.js",
-    "version": "yarn version"
+    "set-version": "yarn version  --no-git-tag-version --new-version"
   },
   "dependencies": {
     "raven": "*",
