--- a/workspaces/raven/package.json
+++ b/workspaces/raven/package.json
@@ -11,7 +11,7 @@
     "build": "tsc -b",
     "watch": "tsc -w",
     "test": "jest",
-    "version": "yarn version"
+    "set-version": "yarn version  --no-git-tag-version --new-version"
   },
   "dependencies": {
     "flattenizer": "^1.1.1",
