--- a/workspaces/example/package.json
+++ b/workspaces/example/package.json
@@ -7,7 +7,8 @@
     "watch": "tsc -b -w",
     "dev": "nodemon ./src/index.ts",
     "start": "node dist/index.js",
-    "set-version": "yarn version  --no-git-tag-version --new-version"
+    "ci-version": "yarn version  --no-git-tag-version --new-version",
+    "ci-publish":"exit 0"
   },
   "dependencies": {
     "raven": "*",
