--- a/workspaces/raven/package.json
+++ b/workspaces/raven/package.json
@@ -11,7 +11,8 @@
     "build": "tsc -b",
     "watch": "tsc -w",
     "test": "jest",
-    "set-version": "yarn version  --no-git-tag-version --new-version"
+    "ci-version": "yarn version  --no-git-tag-version --new-version",
+    "ci-publish":"yarn publish --new-version"
   },
   "dependencies": {
     "flattenizer": "^1.1.1",
