--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -1,7 +1,7 @@
 # This workflow will run tests using node and then publish a package to GitHub Packages when a release is created
 # For more information see: https://docs.github.com/en/actions/publishing-packages/publishing-nodejs-packages
 
-name: Node.js Package
+name: Publish npm packages
 
 on:
   workflow_dispatch: 
@@ -33,6 +33,6 @@ jobs:
           registry-url: https://nexus.thor.akromentos.com/repository/npm/
           always-auth: true
       - run: yarn
-      - run: yarn workspaces run set-version $GITHUB_REF_NAME
+      - run: yarn workspaces run ci-version $GITHUB_REF_NAME
       - run: yarn build
-      - run: yarn workspace raven publish
+      - run: yarn workspaces run ci-publish $GITHUB_REF_NAME
