--- a/.github/workflows/npm-publish-raven-plugin-koa.yml
+++ b/.github/workflows/npm-publish-raven-plugin-koa.yml
@@ -34,4 +34,4 @@ jobs:
           always-auth: true
       - run: yarn
       - run: yarn workspace raven-plugin-koa build
-      - run: yarn workspace raven-plugin-koa publish --new-version $GITHUB_REF_NAME
+      - run: yarn workspace raven-plugin-koa publish --no-git-tag-version --new-version $GITHUB_REF_NAME
