--- a/.github/workflows/ci-raven-plugin-koa.yml
+++ b/.github/workflows/ci-raven-plugin-koa.yml
@@ -1,7 +1,4 @@
-# This workflow will run tests using node and then publish a package to GitHub Packages when a release is created
-# For more information see: https://docs.github.com/en/actions/publishing-packages/publishing-nodejs-packages
-
-name: Publish raven
+name: Publish raven-plugin-koa
 
 on:
   workflow_dispatch: 
@@ -33,5 +30,5 @@ jobs:
           registry-url: https://nexus.thor.akromentos.com/repository/npm/
           always-auth: true
       - run: yarn
-      - run: yarn workspace raven build
-      - run: yarn workspace raven publish --no-git-tag-version --new-version $GITHUB_REF_NAME
+      - run: yarn workspace raven-plugin-koa build
+      - run: yarn workspace raven-plugin-koa publish --no-git-tag-version --new-version $GITHUB_REF_NAME
