--- a/workspaces/raven-plugin-sequelize/package.json
+++ b/workspaces/raven-plugin-sequelize/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "raven": "*",
+    "tsyringe": "*",
     "sequelize": "^6.21.4",
     "sequelize-typescript": "^2.1.3"
   },
