--- a/workspaces/example/package.json
+++ b/workspaces/example/package.json
@@ -15,6 +15,7 @@
     "raven-plugin-koa": "*",
     "raven-plugin-koa-auth": "*",
     "raven-plugin-sequelize": "*",
+    "koa": "*",
     "sqlite3": "^5.0.11"
   },
   "devDependencies": {
