--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -12,7 +12,7 @@ jobs:
         uses: actions/setup-node@v3.6.0
         with:
           always-auth: true
-          node-version: true
+          node-version: 16
           registry-url: ${{ secrets.MY_SECRET }}
           token: ${{ secrets.MY_SECRET }}
           cache: yarn
