--- a/workspaces/raven/package.json
+++ b/workspaces/raven/package.json
@@ -12,7 +12,7 @@
     "watch": "tsc -w",
     "test": "jest",
     "ci-version": "yarn version  --no-git-tag-version --new-version",
-    "ci-publish":"yarn publish --new-version"
+    "ci-publish":"yarn publish --no-git-tag-version --new-version"
   },
   "dependencies": {
     "flattenizer": "^1.1.1",
